# the24

./: .contemporary.json  .parlance.json  CMakeLists.txt  README.md  the24.pro
application/: CMakeLists.txt  alarms.cpp  alarms.h  alarms.ui  application.pro  clockhelpers.cpp  clockhelpers.h  com.vicr123.the24.desktop  defaults.conf  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  stopwatch.cpp  stopwatch.h  stopwatch.ui  the24.conf  timer.cpp  timer.h  timer.ui
application-qml/: CMakeLists.txt  Main.qml  main.cpp
application-qml/alarm/: AddAlarmPopover.qml  AlarmDisplay.qml  AlarmsPane.qml  CMakeLists.txt  alarmmodel.cpp  alarmmodel.h  alarmpanecontroller.cpp  alarmpanecontroller.h
application-qml/common/: CMakeLists.txt  clockhelpers.h
application-qml/stopwatch/: CMakeLists.txt  StopwatchDisplay.qml  StopwatchPane.qml  stopwatchmodel.cpp  stopwatchmodel.h  stopwatchpanecontroller.cpp  stopwatchpanecontroller.h
application-qml/timer/: AddTimerPopover.qml  CMakeLists.txt  TimerDisplay.qml  TimerPane.qml  timermodel.cpp  timermodel.h  timerpanecontroller.cpp  timerpanecontroller.h
application-qml/translations/: en_US.ts  he_IL.ts
application-qml/worldclock/: AddClockPopup.qml  CMakeLists.txt  WorldClockDisplay.qml  WorldClocksPane.qml  analogueclock.cpp  analogueclock.h  timezonesmodel.cpp  timezonesmodel.h  worldclock.cpp  worldclock.h  worldclockcontroller.cpp  worldclockcontroller.h
application/alarm/: alarmpopover.cpp  alarmpopover.h  alarmpopover.ui  alarms.cpp  alarms.h  alarms.ui  alarmwidget.cpp  alarmwidget.h  alarmwidget.ui
application/stopwatch/: stopwatch.cpp  stopwatch.h  stopwatch.ui  stopwatchwidget.cpp  stopwatchwidget.h  stopwatchwidget.ui
application/timer/: newtimerpopover.cpp  newtimerpopover.h  newtimerpopover.ui  timer.cpp  timer.h  timer.ui  timerwidget.cpp  timerwidget.h  timerwidget.ui
application/translations/: aa_ET.ts  am_ET.ts  ar_DZ.ts  ar_IQ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TN.ts  as_IN.ts  au_AU.ts  az_AZ.ts  bg_BG.ts  bs_BA.ts  cr_CA.ts  cs_CZ.ts  de_DE.qm  de_DE.ts  dv_MV.ts  dz_BT.ts  en_CA.ts  en_GB.ts  en_NZ.ts  en_US.ts  es.ts  es_AR.ts  es_BO.ts  es_CO.ts  es_ES.ts  es_MX.ts  es_PA.ts  es_PE.ts  es_SV.ts  es_VE.ts  et_EE.ts  (+59 more)
application/translations/desktop/com.vicr123.the24/: cs_CZ.json  de.json  en.json  he_IL.json  nl.json  vi.json
application/worldclock/: addclockpopover.cpp  addclockpopover.h  addclockpopover.ui  analogueclock.cpp  analogueclock.h  analogueclock.ui  timezonesmodel.cpp  worldclock.cpp  worldclock.h  worldclock.ui  worldclockwidget.cpp  worldclockwidget.h  worldclockwidget.ui
daemon/: CMakeLists.txt  alarm.cpp  alarm.h  com.vicr123.the24.Alarm.xml  com.vicr123.the24.Stopwatch.xml  com.vicr123.the24.Timer.xml  com.vicr123.the24.daemon.desktop  com.vicr123.the24.xml  daemon.pro  main.cpp  stopwatch.cpp  stopwatch.h  the24manager.cpp  the24manager.h  timer.cpp  timer.h
daemon/translations/: aa_ET.ts  am_ET.ts  ar_DZ.ts  ar_IQ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TN.ts  az_AZ.ts  bg_BG.ts  bs_BA.ts  cr_CA.ts  cs_CZ.ts  de_DE.qm  de_DE.ts  en_GB.ts  en_US.ts  es_AR.ts  es_BO.ts  es_CO.ts  es_EC.ts  es_ES.ts  es_PA.ts  es_SV.ts  es_VE.ts  et_EE.ts  fa_IR.ts  fi_FI.ts  fr_CA.ts  fr_FR.ts  ha_NE.ts  he_IL.ts  hi_IN.ts  hr_HR.ts  (+46 more)
